# picocalc-os-rs

./: .gitignore  .gitmodules  Cargo.toml  Embed.toml  LICENSE  README.md  cbindgen.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
.helix/: languages.toml
abi/: Cargo.toml
abi/src/: lib.rs
abi_sys/: Cargo.toml
abi_sys/src/: lib.rs
kernel/: Cargo.toml  build.rs  memory.x  pimoroni2w.x
kernel/src/: abi.rs  audio.rs  display.rs  elf.rs  framebuffer.rs  heap.rs  main.rs  psram.rs  storage.rs  syscalls.rs  ui.rs  usb.rs  utils.rs
kernel/src/peripherals/: keyboard.rs  mod.rs
kernel/src/scsi/: error.rs  mod.rs  scsi_types.rs
main_proc_macro/: Cargo.toml
main_proc_macro/src/: lib.rs
pico/: Cargo.toml
pico/src/: display.rs
pico/src/peripherals/: mod.rs
selection_ui/: Cargo.toml
selection_ui/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
simulator/: Cargo.toml
simulator/src/: main.rs
src/: display.rs  heap.rs  keyboard.rs  main.rs  storage.rs  usb.rs
src/peripherals/: battery.rs  keyboard.rs  mod.rs
src/scsi/: mod.rs  scsi_types.rs
user-apps/: link.x  memory.x
user-apps/calculator/: Cargo.toml
user-apps/calculator/src/: main.rs
user-apps/doom/: Cargo.toml  build.rs  inttypes.h  limits.h  memory.x
user-apps/doom/src/: doom.rs  libc.rs  main.rs
user-apps/gallery/: Cargo.toml
user-apps/gallery/src/: main.rs
user-apps/gboy/: Cargo.toml  build.rs  peanut_gb_stub.c
user-apps/gboy/src/: main.rs  peanut.rs
user-apps/gif/: Cargo.toml
user-apps/gif/src/: main.rs
user-apps/nes/: Cargo.toml  build.rs
user-apps/nes/src/: main.rs  peanut.rs
user-apps/snake/: Cargo.toml
user-apps/snake/src/: main.rs
user-apps/wav_player/: Cargo.toml
user-apps/wav_player/src/: main.rs
user_apps/: memory.x
user_apps/calculator/: Cargo.toml
user_apps/calculator/src/: main.rs
user_apps/gallery/: Cargo.toml
user_apps/gallery/src/: main.rs
user_apps/gboy/: Cargo.toml  build.rs
user_apps/gboy/src/: main.rs  peanut.rs
user_apps/gif/: Cargo.toml  build.rs
user_apps/gif/src/: main.rs
user_apps/snake/: Cargo.toml
user_apps/snake/src/: main.rs
user_apps/wav_player/: Cargo.toml
user_apps/wav_player/src/: main.rs
userlib/: Cargo.toml
userlib/src/: lib.rs
userlib_sys/: Cargo.toml
userlib_sys/src/: lib.rs
