[workspace]
resolver = "3"
members = [
  "kernel",
  "abi_sys",
  "abi",
  "user-apps/calculator",
  "user-apps/snake",
  "user-apps/gallery",
  "user-apps/gif",
  "user-apps/nes",
]

[profile.release]
debug = true
opt-level = "z"
lto = true
codegen-units = 1

[profile.release-binary]
inherits = "release"
codegen-units = 1
lto = true
debug = false
opt-level = "z"
panic = "abort"

[profile.dev]
lto = true
opt-level = "z"
