[workspace]
resolver = "3"
members = [
  "kernel",
  "userlib_sys",
  "userlib",
  "selection_ui",
  "user_apps/calculator",
  "user_apps/snake",
  "user_apps/gallery",
  "user_apps/gif",
  "user_apps/wav_player",
]

[profile.release]
debug = true
opt-level = "z"
lto = true
codegen-units = 1

[profile.release-binary]
inherits = "release"
codegen-units = 1
lto = true
debug = false
opt-level = "z"
panic = "unwind"

[profile.dev]
lto = true
opt-level = "s"
