[package]
name = "abi"
version = "0.1.0"
edition = "2024"

[dependencies]
abi_sys = { path = "../abi_sys" }
main_proc_macro = { path = "../main_proc_macro" }
embedded-sdmmc = { version = "0.9", default-features = false }
embedded-graphics = "0.8.1"
once_cell = { version = "1", default-features = false }
rand_core = "0.9.3"
