[package]
name = "abi_sys"
version = "0.1.0"
edition = "2024"

[features]
default = ["alloc"]
alloc = []
defmt = ["dep:defmt"]

[dependencies]
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
bitflags = "2.9.4"
embedded-graphics = "0.8.1"
embedded-sdmmc = { version = "0.9.0", default-features = false }
defmt = { version = "0.3", optional = true }

[build-dependencies]
cbindgen = "0.24.0"
