[package]
name = "picocalc-os-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "picocalc-os-rs"
path = "src/main.rs"
test = false
doctest = false
bench = false

[features]
default = ["rp235x", "defmt"]
rp2040 = ["embassy-rp/rp2040"]
rp235x = ["embassy-rp/rp235xb"]
trouble = ["dep:bt-hci", "dep:cyw43", "dep:cyw43-pio", "dep:trouble-host"]
defmt = [
  "dep:defmt",
  "panic-probe/print-defmt",
  "embassy-executor/defmt",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
  "embassy-rp/defmt",
  "embassy-sync/defmt",
  "embedded-graphics/defmt",
  "embedded-sdmmc/defmt-log",
  # "bt-hci/defmt",
  # "cyw43/defmt",
  # "cyw43-pio/defmt",
]

[dependencies]
embassy-executor = { version = "0.7", features = [
  "arch-cortex-m",
  "executor-interrupt",
  "executor-thread",
  "nightly",
] }
embassy-rp = { version = "0.4.0", features = [
  "critical-section-impl",
  "unstable-pac",
  "time-driver",
  "binary-info",
] }
embassy-usb = "0.4.0"
embassy-futures = "0.1.1"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-embedded-hal = "0.3.1"
embassy-sync = { version = "0.7" }
trouble-host = { version = "0.1", features = [
  "derive",
  "scan",
], optional = true }
bt-hci = { version = "0.2", default-features = false, optional = true }
cyw43 = { version = "0.3.0", features = [
  "firmware-logs",
  "bluetooth",
], optional = true }
cyw43-pio = { version = "0.3.0", optional = true }

embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0"
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
panic-probe = "0.3"
portable-atomic = { version = "1.11", features = ["critical-section"] }

defmt = { version = "0.3", optional = true }
defmt-rtt = "0.4.2"

embedded-graphics = { version = "0.8.1" }
embedded-sdmmc = { version = "0.9", default-features = false }
st7365p-lcd = { git = "https://github.com/legitcamper/st7365p-lcd-rs", rev = "87abf450404865dcb535292e9e1a6a2457fd4599" } # async branch

shared = { path = "../shared" }
abi = { path = "../abi" }

static_cell = "2.1.1"
bitflags = "2.9.1"
talc = "4.4.3"
spin = "0.10.0"
heapless = "0.8.0"
num_enum = { version = "0.7.4", default-features = false }
