[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false

[features]
default = ["rp235x", "defmt"]
rp2040 = ["embassy-rp/rp2040"]
rp235x = ["embassy-rp/rp235xb"]
trouble = ["dep:bt-hci", "dep:cyw43", "dep:cyw43-pio", "dep:trouble-host"]
defmt = [
  "dep:defmt",
  "shared/defmt",
  "panic-probe/print-defmt",
  "embassy-executor/defmt",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
  "embassy-rp/defmt",
  "embassy-sync/defmt",
  "embedded-graphics/defmt",
  "embedded-sdmmc/defmt-log",
  # "bt-hci/defmt",
  # "cyw43/defmt",
  # "cyw43-pio/defmt",
]

[dependencies]
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-interrupt",
  "executor-thread",
  "nightly",
] }
embassy-rp = { version = "0.8.0", features = [
  "critical-section-impl",
  "unstable-pac",
  "time-driver",
] }
embassy-usb = "0.5.1"
embassy-futures = "0.1.2"
embassy-time = { version = "0.5.0", features = ["generic-queue-8"] }
embassy-embedded-hal = "0.3.2"
embassy-sync = { version = "0.7" }
trouble-host = { version = "0.1", features = [
  "derive",
  "scan",
], optional = true }
bt-hci = { version = "0.2", default-features = false, optional = true }
cyw43 = { version = "0.3.0", features = [
  "firmware-logs",
  "bluetooth",
], optional = true }
cyw43-pio = { version = "0.3.0", optional = true }

embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal = "0.2.7"
embedded-hal_2 = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-async = "1.0.0"
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
panic-probe = "0.3"
portable-atomic = { version = "1.11", features = ["critical-section"] }
assign-resources = "0.5.0"

defmt = { version = "0.3", optional = true }
defmt-rtt = "0.4.2"

embedded-sdmmc = { version = "0.9", default-features = false }
st7365p-lcd = { git = "https://github.com/legitcamper/st7365p-lcd-rs", rev = "a784b9e6df0769371dfc522528e770cf8fc6403a" } # async branch
embedded-graphics = { version = "0.8.1" }
embedded-text = "0.7.2"
embedded-layout = "0.4.2"
kolibri-embedded-gui = "0.1.0"

rand = { version = "0.9.0", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
static_cell = "2.1.1"
bitflags = "2.9.4"
heapless = "0.8.0"
num_enum = { version = "0.7.4", default-features = false }
goblin = { version = "0.10.1", default-features = false, features = ["elf32"] }
talc = "4.4.3"
spin = "0.10.0"

shared = { path = "../shared" }
abi_sys = { path = "../abi_sys" }
